<resources>
    <string name="app_name">StyleSync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Leanback MainActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="Button">Button</string>
    <string name="Closet">Closet</string>
    <string name="Image2">Image2</string>
    <string name="Image1">Image1</string>
    <string name="yourCloset">Your Closet</string>
    <string name="CameraView">Camera</string>
    <string name="ClothingType">Select a clothing type: </string>
    <string name="clothingType">Select a clothing type: </string>
    <string name="seasonType">What season best fits this piece of clothing</string>
    <string name="SeasonType">Seasons best fit for this clothing piece</string>
    <string name="seasonType1">Seasons best fit for clothing piece</string>
    <string name="colorType">Select color of clothing piece</string>
    <string name="patternedTF">Is patterned?</string>
    <string name="saveButton">Save</string>

    <string name="clothing_type">Dropdown Menu</string>
    <string name="select">Select Item</string>
    <string name="select_1">Select Item 1</string>

</resources>